--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -29,20 +29,20 @@ displayName="Creeper AI Updated" #mandatory
 updateJSONURL="http://myurl.me/" #optional
 
 # A URL for the "homepage" for this mod, displayed in the mod UI
-displayURL="http://example.com/" #optional
+displayURL="https://www.curseforge.com/minecraft/mc-mods/creeper-ai-updated" #optional
 
 # A file name (in the root of the mod JAR) containing a logo for display
 logoFile="" #optional
 
 # A text field displayed in the mod UI
-credits="soy SrGnis" #optional
+credits="Mod inspired by the work of Funwayguy in his mod Epic Siege Mod" #optional
 
 # A text field displayed in the mod UI
 authors="SrGnis" #optional
 
 # The description text for the mod (multi line!) (#mandatory)
 description='''
-	Esto es ladescripcion del mod xd
+Gives creepers the abitlity of see trough walls, spawn powered and explode if they cant reach you, destroying obstacles and walls.
 '''
 
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
