--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,6 +1,8 @@
 modLoader="javafml" #mandatory
 
-loaderVersion="[32,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
+loaderVersion="[35,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
+
+license="mit"
 
 issueTrackerURL="https://github.com/SrGnis/Creeper_AI_Updated/issues" #optional
 
@@ -8,7 +10,7 @@ issueTrackerURL="https://github.com/SrGnis/Creeper_AI_Updated/issues" #optional
 
 modId="creeperaiupdated" #mandatory
 
-version="1.2" #mandatory
+version="1.3" #mandatory
 
 displayName="Creeper AI Updated" #mandatory
 
@@ -31,7 +33,7 @@ description='''Gives creepers the ability of see trough walls, spawn powered and
     # Does this dependency have to exist - if not, ordering below must be specified
     mandatory=true #mandatory
     # The version range of the dependency
-    versionRange="[32,)" #mandatory
+    versionRange="[35,)" #mandatory
     # An ordering relationship for the dependency - BEFORE or AFTER required if the relationship is not mandatory
     ordering="NONE"
     # Side this dependency is applied on - BOTH, CLIENT or SERVER
@@ -40,6 +42,6 @@ description='''Gives creepers the ability of see trough walls, spawn powered and
 [[dependencies.creeperaiupdated]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.16.1]"
+    versionRange="[1.16.4,1.17)"
     ordering="NONE"
     side="BOTH"
