--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,7 +10,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  build_forge:
 
     runs-on: ubuntu-latest
 
@@ -21,10 +21,29 @@ jobs:
       with:
         java-version: 1.8
     - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      run: chmod +x forge/gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: forge/gradlew build
     - uses: actions/upload-artifact@v2
       with:
-        name: creeperaiupdated
+        name: creeperaiupdated_forge
+        path: build/libs
+
+  build_fabric:
+    
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: Grant execute permission for gradlew
+      run: chmod +x fabric/gradlew
+    - name: Build with Gradle
+      run: fabric/gradlew build
+    - uses: actions/upload-artifact@v2
+      with:
+        name: creeperaiupdated_fabric
         path: build/libs
