--- a/fabric/gradle.properties
+++ b/fabric/gradle.properties
@@ -8,9 +8,9 @@ org.gradle.jvmargs=-Xmx2G
 	loader_version=0.10.8
 
 # Mod Properties
-	mod_version = 1.3.1
+	mod_version = 1.3.3
 	maven_group = com.srgnis.creeperaiupdated
-	archives_base_name = creeperaiupdated-mod
+	archives_base_name = creeperaiupdated-fabric
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
