--- a/fabric/gradle.properties
+++ b/fabric/gradle.properties
@@ -1,17 +1,16 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx2G
+org.gradle.jvmargs=-Xmx3G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.4
-	yarn_mappings=1.16.4+build.7
-	loader_version=0.10.8
+	# check these on https://fabricmc.net/versions.html
+	minecraft_version=1.17
+	yarn_mappings=1.17+build.13
+	loader_version=0.11.6
 
 # Mod Properties
-	mod_version = 1.3.3
+	mod_version = 1.4.0
 	maven_group = com.srgnis.creeperaiupdated
 	archives_base_name = creeperaiupdated-fabric
 
 # Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.29.3+1.16
+	fabric_version=0.36.0+1.17
