--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,6 +16,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - working-directory: forge
     - uses: actions/checkout@v2
     - name: Set up JDK 1.16
       uses: actions/setup-java@v1
@@ -35,6 +36,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+    - working-directory: fabric
     - uses: actions/checkout@v2
     - name: Set up JDK 1.16
       uses: actions/setup-java@v1
