--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,7 +16,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - working-directory: forge
     - uses: actions/checkout@v2
     - name: Set up JDK 1.16
       uses: actions/setup-java@v1
@@ -25,7 +24,9 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x forge/gradlew
     - name: Build with Gradle
-      run: forge/gradlew build
+      run:
+        cd forge
+        gradlew build
     - uses: actions/upload-artifact@v2.2.4
       with:
         name: creeperaiupdated_forge
@@ -36,7 +37,6 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - working-directory: fabric
     - uses: actions/checkout@v2
     - name: Set up JDK 1.16
       uses: actions/setup-java@v1
@@ -45,7 +45,9 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x fabric/gradlew
     - name: Build with Gradle
-      run: fabric/gradlew build
+      run:
+        cd fabric
+        gradlew build
     - uses: actions/upload-artifact@v2.2.4
       with:
         name: creeperaiupdated_fabric
