--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,10 +23,10 @@ jobs:
         java-version: 1.16
     - name: Grant execute permission for gradlew
       run: chmod +x forge/gradlew
+    - name: Changing directory
+      run: cd forge
     - name: Build with Gradle
-      run:
-        cd forge
-        gradlew build
+      run: gradlew build
     - uses: actions/upload-artifact@v2.2.4
       with:
         name: creeperaiupdated_forge
@@ -44,10 +44,10 @@ jobs:
         java-version: 1.16
     - name: Grant execute permission for gradlew
       run: chmod +x fabric/gradlew
+    - name: Changing directory
+      run: cd fabric
     - name: Build with Gradle
-      run:
-        cd fabric
-        gradlew build
+      run: gradlew build
     - uses: actions/upload-artifact@v2.2.4
       with:
         name: creeperaiupdated_fabric
