--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,12 +23,8 @@ jobs:
         java-version: 1.16
     - name: Grant execute permission for gradlew
       run: chmod +x forge/gradlew
-    - name: Changing directory
-      run: cd forge
-    - name: printing
-      run: pwd
     - name: Build with Gradle
-      run: ./gradlew build
+      run: cd forge && ./gradlew build
     - uses: actions/upload-artifact@v2.2.4
       with:
         name: creeperaiupdated_forge
@@ -46,12 +42,8 @@ jobs:
         java-version: 1.16
     - name: Grant execute permission for gradlew
       run: chmod +x fabric/gradlew
-    - name: Changing directory
-      run: cd fabric
-    - name: printing
-      run: pwd
     - name: Build with Gradle
-      run: ./gradlew build
+      run: cd fabric && ./gradlew build
     - uses: actions/upload-artifact@v2.2.4
       with:
         name: creeperaiupdated_fabric
