--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -47,4 +47,4 @@ jobs:
     - uses: actions/upload-artifact@v2.2.4
       with:
         name: creeperaiupdated_fabric
-        path: ~/fabric/build/libs
+        path: build/libs
