--- a/fabric/gradle.properties
+++ b/fabric/gradle.properties
@@ -1,16 +1,13 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.18
-	yarn_mappings=1.18+build.1
-	loader_version=0.12.8
+	# check these on https://fabricmc.net/develop
+	minecraft_version=1.18.1
+	yarn_mappings=1.18.1+build.22
+	loader_version=0.12.12
 
 # Mod Properties
 	mod_version = 1.5.1
 	maven_group = com.srgnis.creeperaiupdated
 	archives_base_name = creeperaiupdated-fabric
-
-# Dependencies
-	fabric_version=0.43.1+1.18
