--- a/fabric/gradle.properties
+++ b/fabric/gradle.properties
@@ -3,14 +3,15 @@ org.gradle.jvmargs=-Xmx3G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.19.2
-	yarn_mappings=1.19.2+build.8
-	loader_version=0.14.9
+	minecraft_version=1.19.4
+	yarn_mappings=1.19.4+build.2
+	loader_version=0.14.21
 
 # Mod Properties
-	mod_version = 1.5.2
-	maven_group = com.srgnis.creeperaiupdated
+	mod_version = 1.5.2+1.19.4
+	maven_group = xyz.srgnis.creeperaiupdated
 	archives_base_name = creeperaiupdated-fabric
 
 # Dependencies
-	fabric_version=0.60.0+1.19.2
+	#Fabric api
+	fabric_version=0.85.0+1.19.4
